force-app/main/default/objects/Client_Team_Member__c/Client_Team_Member__c.object-meta.xml
<CustomObject>
    <label>Client Team Member</label>
    <nameField>
        <displayFormat>CTM-{0000}</displayFormat>
        <label>Client Team Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>