force-app/main/default/objects/Client_Team_Member__c/fields/SMB_Customer__c.field-meta.xml
<CustomField>
    <fullName>SMB_Customer__c</fullName>
    <label>SMB Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Team Members</relationshipLabel>
    <relationshipName>Client_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>