force-app/main/default/objects/Client_Team_Member__c/validationRules/CTM_limit_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>CTM_limit_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>SMB_Customer__r.Total_CTM_s__c  &gt;= 1</errorConditionFormula>
    <errorMessage>already CTM is avalaible on this customer</errorMessage>
</ValidationRule>